fixed css overlap / whitespace

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,14 +2,17 @@
 
 .App {
   position: fixed;
-  top: 0px;
-  left: 0px;
   width: 100%;
   height: 100%;
-  min-height: 350px;
   overflow-y: auto;
   overflow-x: hidden;
   text-align: center;
-  background-color: $background-color;
   transition: all 0.2s, background-color 1s;
+  .page-content {
+    top: 0px;
+    width: 100%;
+    background-color: $background-color;
+    height: 100%;
+    min-height: 500px;
+  }
 }
